cmake_minimum_required(VERSION 3.17)

project(zstd)

add_library(zstd OBJECT
lib/zstd.h
lib/common
lib/common/debug.h
lib/common/error_private.c
lib/common/cpu.h
lib/common/mem.h
lib/common/entropy_common.c
lib/common/xxhash.c
lib/common/compiler.h
lib/common/fse_decompress.c
lib/common/xxhash.h
lib/common/zstd_errors.h
lib/common/zstd_common.c
lib/common/bitstream.h
lib/common/fse.h
lib/common/pool.h
lib/common/debug.c
lib/common/huf.h
lib/common/pool.c
lib/common/error_private.h
lib/common/zstd_internal.h
lib/common/threading.h
lib/common/threading.c
lib/common/zstd_deps.h
lib/compress
lib/compress/zstdmt_compress.h
lib/compress/zstdmt_compress.c
lib/compress/zstd_compress.c
lib/compress/zstd_compress_sequences.h
lib/compress/zstd_ldm.h
lib/compress/zstd_compress_superblock.h
lib/compress/fse_compress.c
lib/compress/zstd_compress_sequences.c
lib/compress/zstd_lazy.c
lib/compress/zstd_double_fast.h
lib/compress/zstd_compress_internal.h
lib/compress/zstd_compress_literals.h
lib/compress/huf_compress.c
lib/compress/zstd_cwksp.h
lib/compress/zstd_ldm.c
lib/compress/zstd_lazy.h
lib/compress/zstd_compress_literals.c
lib/compress/zstd_fast.c
lib/compress/hist.h
lib/compress/hist.c
lib/compress/zstd_opt.h
lib/compress/zstd_fast.h
lib/compress/zstd_compress_superblock.c
lib/compress/zstd_opt.c
lib/compress/zstd_double_fast.c
lib/decompress
lib/decompress/zstd_ddict.c
lib/decompress/zstd_ddict.h
lib/decompress/zstd_decompress.c
lib/decompress/zstd_decompress_internal.h
lib/decompress/huf_decompress.c
lib/decompress/zstd_decompress_block.h
lib/decompress/zstd_decompress_block.c
lib/dictBuilder/cover.c
lib/dictBuilder/cover.h
lib/dictBuilder/divsufsort.c
lib/dictBuilder/divsufsort.h
lib/dictBuilder/fastcover.c
lib/dictBuilder/zdict.c
lib/dictBuilder/zdict.h
)
